--- a/app/index.html
+++ b/app/index.html
@@ -54,9 +54,18 @@
                   </i>
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Something else here Something else here Something else here</a></li>
-                  <li><a href="#">Something else here Something else here Something else here</a></li>
-                  <li><a href="#">Something else here Something else here Something else here</a></li>
+                  <li>
+                    <a href="#"><i class="fa fa-circle pull-left" style="color:#f89406" title="Unread message"></i>
+                      Something else here Something else here Something else here. </a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa fa-circle-o pull-left" style="color:grey" title="Read message"></i>
+                      Something else here Something else here Something else here. </a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa fa-circle-o pull-left" style="color:grey" title="Read message"></i>
+                      Something else here Something else here Something else here. </a>
+                  </li>
                   <li role="separator" class="divider"></li>
                   <li><a href="#">See all messages</a></li>
                 </ul>
@@ -65,8 +74,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                    <img src="https://gravatar.com/avatar/8cda09d2549064e91b5b55008dc381dc?d=retro&s=50" height="20px" width="20px"
                     class="nav-profile-img">
-                   Username
-                  <span class="caret"></span>
+                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Admin page</a></li>
@@ -85,16 +93,24 @@
       <div ng-view=""></div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">© Logical Clocks 2017</p>
-        <a href="#" class="marker-hops"><img alt="hops icon" width="25" src="images/hops-black.png"/></a>
-        <div class="pull-right">
-            <ul class="list-inline">
-               <li><a href="#">Pricing</a></li>
-               <li><a href="#">Contact</a></li>
-               <li><a href="#">Terms</a></li>
-            </ul>
+    <div class="container">
+      <div class="footer">
+        <div class="row">
+          <div class="col-md-5">
+            <p class="pull-left">© 2017 Logical Clocks.</p>
+          </div>
+          <div class="col-md-1">
+            <a href="#" class="marker-hops pull-right"><img alt="hops icon" width="25" src="images/hops-black.png"/></a>
+          </div>
+          <div class="col-md-6">
+            <div class="pull-right">
+                <ul class="list-inline">
+                   <li><a href="#">Pricing</a></li>
+                   <li><a href="#">Contact</a></li>
+                   <li><a href="#">Terms</a></li>
+                </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
