--- a/app/index.html
+++ b/app/index.html
@@ -145,6 +145,14 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/message.js"></script>
+        <script src="scripts/controllers/search.js"></script>
+        <script src="scripts/controllers/project.js"></script>
+        <script src="scripts/controllers/publicdataset.js"></script>
+        <script src="scripts/controllers/profile.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/controllers/dataset.js"></script>
         <!-- endbuild -->
 </body>
 </html>
