--- a/app/index.html
+++ b/app/index.html
@@ -29,78 +29,75 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-if="logedIn" class="header">
-      <div class="navbar navbar-inverse" role="navigation">
-        <div class="container" ng-class="{'container-full-width': projectId}">
-          <div class="navbar-header">
+    <nav ng-if="logedIn" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container" ng-class="{'container-full-width': projectId}">
+        <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
-            <a class="navbar-brand hopsworks-brand" href="#/">Hopsworks
-              <img alt="hops icon" class="pull-right" width="25" src="images/hops.png"/>
-            </a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-            <form class="navbar-form navbar-left">
-              <div ng-if="false" class="form-group">
-                <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
-                    <span class="hamb-top"></span>
-                    <span class="hamb-middle"></span>
-                    <span class="hamb-bottom"></span>
-                </button>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control navbar-search" placeholder="Search">
-              </div>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                  <i class="fa fa-bell-o fa-lg" aria-hidden="true">
-                    <span class="badge hopsworks-badge">999</span>
-                  </i>
-                  <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#!/message"><i class="fa fa-circle pull-left" style="color:#f89406" title="Unread message"></i>
-                      Something else here Something else here Something else here. </a>
-                  </li>
-                  <li>
-                    <a href="#!/message"><i class="fa fa-circle-o pull-left" style="color:grey" title="Read message"></i>
-                      Something else here Something else here Something else here. </a>
-                  </li>
-                  <li>
-                    <a href="#!/message"><i class="fa fa-circle-o pull-left" style="color:grey" title="Read message"></i>
-                      Something else here Something else here Something else here. </a>
-                  </li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#!/message">See all messages</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                   <img src="https://gravatar.com/avatar/8cda09d2549064e91b5b55008dc381dc?d=retro&s=50" height="20px" width="20px"
-                    class="nav-profile-img">
-                   <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Admin page</a></li>
-                  <li><a href="#">Account</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Sign out <i class="fa fa-sign-out fa-lg pull-right"></i></a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+          <a class="navbar-brand hopsworks-brand" href="#/">Hopsworks
+            <img alt="hops icon" class="pull-right" width="25" src="images/hops.png"/>
+          </a>
         </div>
-      </div>
-    </div>
+
+        <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <form class="navbar-form navbar-left">
+            <div ng-if="false" class="form-group">
+              <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+                  <span class="hamb-top"></span>
+                  <span class="hamb-middle"></span>
+                  <span class="hamb-bottom"></span>
+              </button>
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control navbar-search" placeholder="Search">
+            </div>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-bell-o fa-lg" aria-hidden="true">
+                  <span class="badge hopsworks-badge">999</span>
+                </i>
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#!/message"><i class="fa fa-circle pull-left" style="color:#f89406" title="Unread message"></i>
+                    Something else here Something else here Something else here. </a>
+                </li>
+                <li>
+                  <a href="#!/message"><i class="fa fa-circle-o pull-left" style="color:grey" title="Read message"></i>
+                    Something else here Something else here Something else here. </a>
+                </li>
+                <li>
+                  <a href="#!/message"><i class="fa fa-circle-o pull-left" style="color:grey" title="Read message"></i>
+                    Something else here Something else here Something else here. </a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#!/message">See all messages</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                 <img src="https://gravatar.com/avatar/8cda09d2549064e91b5b55008dc381dc?d=retro&s=50" height="20px" width="20px"
+                  class="nav-profile-img">
+                 <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Admin page</a></li>
+                <li><a href="#">Account</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Sign out <i class="fa fa-sign-out fa-lg pull-right"></i></a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+    </nav>
     <div growl reference="1"></div>
     <div class="container container-body" ng-class="{'container-full-width': projectId, 'container-full': !logedIn}">
       <div class="alert alert-danger alert-dismissable">
@@ -108,7 +105,7 @@
         <strong>Error!</strong> Database unavailable.
       </div>
       <!-- Sidebar -->
-      <nav ng-if="logedIn && projectId" class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper">
+      <nav ng-if="logedIn && projectId !== 0" class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper">
         <ul class="nav sidebar-nav">
             <li class="sidebar-brand"><a href="#">ProjectName</a></li>
             <li><a href="#">Home</a></li>
