--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
             <strong>Error!</strong> Database unavailable.
           </div>
           <!-- Sidebar -->
+          <h1 id="toggle-nav" class="menu-toggle is-closed" data-toggle="offcanvas"></h1>
           <nav ng-if="logedIn && projectId > 0" class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper">
             <ul class="nav sidebar-nav">
                 <li class="sidebar-brand"><a href="#!/project">ProjectName</a></li>
