--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
                 <hr>
                 <li><a >Setting</a></li>
                 <li><a >Members</a></li>
-                <li><a >Github</a></li>
+                <li><a >Metadata designer</a></li>
             </ul>
           </nav>
           <div ng-view=""></div>
