--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/message.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/publicds.css">
+    <link rel="stylesheet" href="styles/modal.css">
     <!-- endbuild -->
   </head>
   <body ng-app="dashboardApp">
@@ -227,6 +228,10 @@
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/register.js"></script>
     <script src="scripts/controllers/dataset.js"></script>
+    <script src="scripts/filters/highlight.js"></script>
+    <script src="scripts/services/modalservice.js"></script>
+    <script src="scripts/controllers/modal.js"></script>
+    <script src="scripts/controllers/inputmodal.js"></script>
     <!-- endbuild -->
 </body>
 </html>
